--- a/src/components/UI/autocomplete/Autocomplete.module.scss
+++ b/src/components/UI/autocomplete/Autocomplete.module.scss
@@ -1,4 +1,5 @@
 @use "@/styles/variables" as *;
+@use "@/styles/animations" as *;
 
 .wrapper {
   position: relative;
@@ -53,16 +54,5 @@
 
   @include respond-above($breakpoint-md) {
     font-size: 16px;
-  }
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: translateY(-4px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
   }
 }
